--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="promo_dari_gopay_jago_untuk_kamu_ndataptkan_voucher_rp_100rb_dan_bunga_7_sekarang_juga"><b>Promo dari Gopay Jago untuk kamu!</b> \nDataptkan voucher Rp 100rb dan bunga 7% sekarang juga!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="dikirim_ke_kuvukiland">Dikirim ke <b>Kuvukiland</b></string>
 </resources>
